--- a/templates/shop/generate_shop_payment_advice.html
+++ b/templates/shop/generate_shop_payment_advice.html
@@ -73,6 +73,13 @@
             <!-- <td>Otto</td>
             <td>@mdo</td> -->
           </tr>
+
+          <tr>
+            <th scope="row">Caution Fee</th>
+            <td>{{ shop.caution_fee }}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
+          </tr>
           <!-- <tr>
             <th scope="row">Shop Legal</th>
             <td>{{ shop.new_shop_legal }}</td>
