--- a/templates/shop/shop_pdf.html
+++ b/templates/shop/shop_pdf.html
@@ -17,18 +17,6 @@
           </tr>
         </thead>
         <tbody>
-            <tr>
-                <th scope="row">Shop Size</th>
-                <td>{{ shop.size }}</td>
-                <!-- <td>Otto</td>
-                <td>@mdo</td> -->
-            </tr>
-            <tr>
-                <th scope="row">Shop Type</th>
-                <td>{{ shop.type }}</td>
-                <!-- <td>Otto</td>
-                <td>@mdo</td> -->
-              </tr>
           <tr>
             <th scope="row">Shop Rent</th>
             <td>{{ shop.rent }}</td>
@@ -65,6 +53,27 @@
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
+
+          <thead>
+            <tr>
+              <th scope="col">Shop Details</th>
+              <th scope="col">#</th>
+              <!-- <th scope="col">Last</th>
+              <th scope="col">Handle</th> -->
+            </tr>
+            <tr>
+              <th scope="row">Shop Size</th>
+              <td>{{ shop.size }}</td>
+              <!-- <td>Otto</td>
+              <td>@mdo</td> -->
+          </tr>
+          <tr>
+              <th scope="row">Shop Type</th>
+              <td>{{ shop.type }}</td>
+              <!-- <td>Otto</td>
+              <td>@mdo</td> -->
+            </tr>
+          </thead>
         </tbody>
       </table>
             </div>
