--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -131,6 +131,15 @@
                   <p>Upload Receipts</p>
                   
                 </a>
+                <a
+                 
+                  href="{% url 'list-all-uploaded-receipts' %}"
+                  
+                >
+                  <i class="fas fa-eye"></i>
+                  <p>View Receipts</p>
+                  
+                </a>
                 <!-- <div class="collapse" id="dashboard">
                   <ul class="nav nav-collapse">
                     <li>
