--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} WELCOME {% endblock %}</title>
+    <title>{% block title %} Nina Sky Innovation Limited {% endblock %}</title>
     <link
       rel="icon"
       href="{% static 'web/css/favicon.ico' %}"
