--- a/templates/receipts/receipts_list.html
+++ b/templates/receipts/receipts_list.html
@@ -9,6 +9,7 @@
         <th style="padding: 10px; border: 1px solid #ddd;">#</th>  <!-- Row number column -->
         <th style="padding: 10px; border: 1px solid #ddd;">Customer</th>
         <th style="padding: 10px; border: 1px solid #ddd;">Amount</th>
+        <th style="padding: 10px; border: 1px solid #ddd;">Payment Account</th>
         <th style="padding: 10px; border: 1px solid #ddd;">Shop Number</th>
         <th style="padding: 10px; border: 1px solid #ddd;">Payment Date</th>
         <th style="padding: 10px; border: 1px solid #ddd;">Receipt Image</th>
@@ -23,6 +24,7 @@
         <td style="padding: 10px; border: 1px solid #ddd;">{{ forloop.counter }}</td>  <!-- Display row number -->
           <td style="padding: 10px; border: 1px solid #ddd;">{{ receipt.customer.title }} {{ receipt.customer.name|title }}</td>
           <td style="padding: 10px; border: 1px solid #ddd;">₦{{ receipt.amount }}</td>
+          <td style="padding: 10px; border: 1px solid #ddd;">₦{{ receipt.payment_account  }}</td>
           <td style="padding: 10px; border: 1px solid #ddd;">{{ receipt.shop_no.name }}</td>
           <td style="padding: 10px; border: 1px solid #ddd;">{{ receipt.payment_date }}</td>
           <td style="padding: 10px; border: 1px solid #ddd;">
