--- a/templates/receipts/receipts_list.html
+++ b/templates/receipts/receipts_list.html
@@ -14,7 +14,7 @@
         </option>
       {% endfor %}
     </select>
-    <button type="submit">Filter</button>
+    <button class="btn btn-primary btn-sm" type="submit">Filter</button>
   </form>
 
   <br>
