--- a/templates/shop/shop_pdf.html
+++ b/templates/shop/shop_pdf.html
@@ -18,38 +18,66 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">Shop Rent</th>
-            <td>{{ shop.rent }}</td>
+            <th scope="row">Net annual rent</th>
+            <td>{{ shop.new_rent }}</td>
             <!-- <td>Otto</td>
             <td>@mdo</td> -->
           </tr>
           <tr>
-            <th scope="row">Shop Price</th>
-            <td>{{shop.shop_price }}</td>
-            <!-- <td>Thornton</td>
-            <td>@fat</td> -->
+            <th scope="row">7.5% VAT</th>
+            <td>{{ shop.vat }}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
           </tr>
           <tr>
-            <th scope="row">Shop Charges</th>
-            <td>{{ shop.shop_charges }}</td>
-            <!-- <td>the Bird</td>
-            <td>@twitter</td> -->
+            <th scope="row">5% VAT</th>
+            <td>{{ shop.wht}}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
+          </tr>
+
+          <tr>
+            <th scope="row">Gross annual rent</th>
+            <td>{{ shop.gross_rent }}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
           </tr>
           <tr>
-            <th scope="row">Shop Agency</th>
-            <td>{{ shop.shop_agency }}</td>
-            <!-- <td>the Bird</td>
-            <td>@twitter</td> -->
-          </tr>
-          <tr>
-            <th scope="row">Shop Legal</th>
+            <th scope="row">Shop Legal (5%)</th>
             <td>{{ shop.shop_legal }}</td>
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
           <tr>
-            <th scope="row"><strong><h4>Total Payment</h4></strong></th>
-            <td><strong>{{ shop.total }}</strong></td>
+            <th scope="row">Shop Agency (15%)</th>
+            <td>{{ shop.new_shop_agency }}</td>
+            <!-- <td>the Bird</td>
+            <td>@twitter</td> -->
+          </tr>
+          <tr>
+            <th scope="row">Shop Legal (5%)</th>
+            <td>{{ shop.new_shop_legal }}</td>
+            <!-- <td>the Bird</td>
+            <td>@twitter</td> -->
+          </tr>
+          <tr>
+            <th scope="row">Service Charge (25%)</th>
+            <td>{{ shop.new_service_charge}}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
+          </tr>
+
+          <tr>
+            <th scope="row">Caution Fee</th>
+            <td>{{ shop.caution_fee }}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
+          </tr>
+
+          
+          <tr>
+            <th scope="row"><strong><h4>Total Rent Payable</h4></strong></th>
+            <td><strong>{{ shop.new_total_rent_payable }}</strong></td>
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
