--- a/templates/receipts/receipts_list.html
+++ b/templates/receipts/receipts_list.html
@@ -57,9 +57,15 @@
               Not Verified
             {% endif %}
           </td>
+          {% if user.is_authenticated and user.is_staff and not user.is_superuser %}
           <td style="padding: 10px; border: 1px solid #ddd;">
-            <a href="{% url 'verify-payment-receipt' receipt.pk %}">Verify Payment</a>
+            <a href="{% url 'review-uploaded-payment-receipts' receipt.pk %}">Review Payment</a>
           </td>
+          {% elif user.is_authenticated and user.is_superuser %}
+          <td style="padding: 10px; border: 1px solid #ddd;">
+            <a href="{% url 'verify-payment-receipt' receipt.pk %}">Approve Payment</a>
+          </td>
+          {% endif %}
         </tr>
       {% endfor %}
     </tbody>
