--- a/templates/web/login.html
+++ b/templates/web/login.html
@@ -75,7 +75,7 @@
 						</div>
 
 						<div>
-							<a href="#" class="txt1">
+							<a href="{% url 'password_reset' %}" class="txt1">
 								Forgot Password?
 							</a>
 						</div>
