--- a/templates/shop/admin_edit_shop_form.html
+++ b/templates/shop/admin_edit_shop_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Shop Form {% endblock %}
+{% extends 'base.html' %} {% block title %} NinaSky | Update Shop {% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
@@ -41,9 +41,11 @@
                                 </div>
 
                         </br>
-                        <div class="row">
-                            <button  type="submit" class="btn btn-success">Submit</button>
-                        </div>
+                        
+                        
+                        <button type="submit" class="btn btn-success">Submit</button>
+                        
+                        
 
 
                     </form>
