--- a/templates/rent/base.html
+++ b/templates/rent/base.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 
     {% if title %}
-        <title>Nina Sky | Rent Management</title>
+        <title>Nina Sky | {{title }}</title>
     {% else %}
         <title>Nina Sky | Rent Management</title>
     {% endif %}
